--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "keywords": [],
     "main": "src/index.js",
     "dependencies": {
+        "@craco/craco": "^6.2.0",
         "antd": "4.16.8",
         "react": "17.0.2",
         "react-dom": "17.0.2",
@@ -14,16 +15,18 @@
     "devDependencies": {
         "@babel/runtime": "7.13.8",
         "@types/react": "^17.0.19",
+        "@types/styled-components": "^5.1.12",
         "@typescript-eslint/eslint-plugin": "^4.29.2",
         "@typescript-eslint/parser": "^4.29.2",
+        "craco-alias": "^3.0.1",
         "eslint": "^7.32.0",
         "prettier": "^2.3.2",
         "typescript": "4.1.3"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test --env=jsdom",
         "eject": "react-scripts eject"
     },
     "browserslist": [
