--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,9 +2,8 @@
     "compilerOptions": {
         "baseUrl": "./",
         "paths": {
-            "pages/*": ["src/pages/*"],
-            "components/*": ["src/components/*"],
-            "styles/*": ["src/styles/*"]
+            "utils/*": ["src/utils/*"],
+            "components/*": ["src/components/*"]
         }
     }
 }
